update to api v2.2